# Allolib-Studio-Online

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Dockerfile  FRONTEND_AUDIT.md  LICENSE  MAT200B_EXAMPLES_PLAN.md  MAT245_EXAMPLES_PLAN.md  NATIVE_COMPAT_AUDIT_app_audio.md  NATIVE_COMPAT_AUDIT_graphics.md  NATIVE_COMPAT_AUDIT_io_math_dist.md  NATIVE_COMPAT_AUDIT_synth_ui.md  NATIVE_COMPAT_PLAN.md  PARAMETER_PIPELINE_PLAN.md  PLAN.md  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  TIMELINE_REDESIGN_PLAN.md  WIKI_PLAN.md  allolib-studio-mockup.jsx  allolib-studio-online-implementation-plan.md  allolib-studio-timeline-completion-plan.md  allolib-studio-unified-timeline-plan (old).md  allolib-studio-unified-timeline-plan.md  asset-library-expansion-plan.md  docker-compose.yml  package-lock.json  package.json  webgpu-full-compatibility-plan.md  webgpu-implementation-plan.md
.github/workflows/: deploy.yml  example-compatibility.yml  release-desktop.yml  rendering-tests.yml
AlloLib Native Test Files/: M5_2_preset_unify.cpp  registry_test.cpp
allolib-wasm/: CMakeLists.txt  INVESTIGATION_NOTES.md
allolib-wasm/examples/: dynamicscene_test.cpp  environment_test.cpp  obj_test.cpp  pbr_test.cpp  polysynth_test.cpp  shader_test.cpp  texture_test.cpp
allolib-wasm/examples/phase5/: blend_modes_test.cpp  easyfbo_test.cpp  gamma_dsp_test.cpp  mesh_primitives_test.cpp  multilight_test.cpp  shape_gallery_test.cpp  spatial_audio_test.cpp  transform_stack_test.cpp
allolib-wasm/include/: al_FBOBridge.hpp  al_GraphicsWebExtension.hpp  al_TextureBridge.hpp  al_WebApp.hpp  al_WebAudioVisualBridge.hpp  al_WebAutoLOD.hpp  al_WebAutoUV.hpp  al_WebControlGUI.hpp  al_WebEnvironment.hpp  al_WebFile.hpp  al_WebFont.hpp  al_WebGL2Backend.hpp  al_WebGLTF.hpp  al_WebGPUAudio.hpp  al_WebGPUBackend.hpp  al_WebGPUBuffer.hpp  al_WebGPUCollision.hpp  al_WebGPUCompute.hpp  al_WebGPUFFT.hpp  al_WebGPUFluid2D.hpp  al_WebGPUFluid3D.hpp  al_WebGPUGranular.hpp  al_WebGPUParticles.hpp  al_WebGPURenderShader.hpp  al_WebGPUSDFRenderer.hpp  al_WebGPUSDFSculpt.hpp  al_WebGPUSDFTerrain.hpp  al_WebGPUSDFVolume.hpp  al_WebGPUSort.hpp  al_WebGPUVectorField.hpp  al_WebGraphicsBackend.hpp  al_WebHDR.hpp  al_WebImage.hpp  al_WebLOD.hpp  al_WebMIDI.hpp  al_WebMeshAdapter.hpp  al_WebMipmapTexture.hpp  al_WebOBJ.hpp  al_WebOSC.hpp  al_WebObjectManager.hpp  (+16 more)
allolib-wasm/include/_studio_shared/: _hrfilter_notes.md  _smoke_test.cpp  audio_features.hpp  automation.hpp  draw_canvas.hpp  param_graph.hpp  pickable.hpp  pixel_audio_bridge.hpp  post_fx.hpp  pv_resynth.hpp  web_convolver.hpp
allolib-wasm/include/al/graphics/: al_DefaultShaders.hpp  al_EasyFBO.hpp  al_Graphics.hpp  al_OpenGL.hpp  al_WebGL2Extensions.hpp
allolib-wasm/include/glad/: glad.h
allolib-wasm/include/native_compat/: al_NativeEnvironment.hpp  al_NativeGLTF.hpp  al_NativeHDR.hpp  al_NativeLOD.hpp  al_NativeOBJ.hpp  al_NativeQuality.hpp  al_NativeScene.hpp  al_StudioCompat.hpp
allolib-wasm/shaders/: README.md
allolib-wasm/shaders/glsl/: color.frag.glsl  color.vert.glsl  mesh.frag.glsl  mesh.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  textured.frag.glsl  textured.vert.glsl
allolib-wasm/shaders/wgsl/: color.frag.wgsl  color.vert.wgsl  lighting.frag.wgsl  lighting.vert.wgsl  mesh.frag.wgsl  mesh.vert.wgsl  particles_emit.compute.wgsl  particles_render.frag.wgsl  particles_render.vert.wgsl  particles_update.compute.wgsl  pbr.frag.wgsl  pbr.vert.wgsl  skybox.frag.wgsl  skybox.vert.wgsl  textured.frag.wgsl  textured.vert.wgsl
allolib-wasm/src/: al_DefaultShaderString_Web.cpp  al_DefaultShaders_Web.cpp  al_Demangle_Web.cpp  al_EasyFBO_Web.cpp  al_FBOBridge.cpp  al_FBO_Web.cpp  al_GraphicsWebExtension.cpp  al_Graphics_Web.cpp  al_OSC_Web.cpp  al_OpenGL_Web.cpp  al_Texture_Web.cpp  al_WebApp.cpp  al_WebAudioBackend.cpp  al_WebControlGUI.cpp  al_WebGL2Backend.cpp  al_WebGL2Extensions.cpp  al_WebGLTF.cpp  al_WebGPUBackend.cpp  al_WebMeshAdapter.cpp  al_WebObjectManager.cpp  al_WebSamplePlayer.cpp  al_WebShaders.cpp  allolib-audio-processor.js  test_app.cpp  web_audio_backend.cpp
backend/: package-lock.json  package.json  railway.json
backend/docker/: Dockerfile  Dockerfile.backend  build-allolib.sh  compile.sh
backend/src/: index.ts
backend/src/routes/: compile.ts
backend/src/services/: compiler.ts  osc-relay.ts  ws-manager.ts
desktop/: DESKTOP_APP_PLAN.md  package-lock.json  package.json
desktop/resources/: README.md
desktop/scripts/: build-local.ps1  build-local.sh  generate-icons.js  setup.ps1
desktop/src/: backend-runner.ts  main.ts  menu.ts  preload.ts
docs/: WEBGPU_FBO_DEBUG_NOTES.md  allolib-studio-unified-timeline-plan.md  webgpu-full-compatibility-plan.md
frontend/: .env.production  .eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/public/: 404.html  allolib-audio-processor.js
frontend/public/assets/: CREDITS.md
frontend/src/: App.vue  main.ts  vite-env.d.ts
frontend/src/components/: AnalysisPanel.vue  AssetLibrary.vue  AssetLoadingTest.vue  AudioAnalysisPanel.vue  Console.vue  ConsolePanel.vue  EditorPane.vue  ExampleDialog.vue  ExportDialog.vue  FileExplorer.vue  FileTabBar.vue  ImportDialog.vue  MonacoEditor.vue  NewFileDialog.vue  NewFolderDialog.vue  ParameterPanel.vue  PopoutVisualizer.vue  Toolbar.vue  (+4 more)
tests/: README.md  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/baselines/: .gitkeep
tests/e2e/: all-examples-pipeline-test.spec.ts  comprehensive-functional-tests.spec.ts  enhanced-functional-tests.spec.ts  example-compatibility.spec.ts  fixtures.ts  parameter-pipeline.spec.ts  rendering-tests.spec.ts  test-helpers.ts  true-functional-tests.spec.ts  visual-expectations.ts  visual-regression.spec.ts  visual-verification.ts  webgpu-features.spec.ts
tests/reporters/: error-tracker.ts
tests/reports/: examples-webgl2-2026-02-05T06-13-28-036Z.json  examples-webgl2-2026-02-05T06-13-28-036Z.md  examples-webgpu-2026-02-05T05-36-27-172Z.md
tests/scripts/: combine-reports.js  local-test-runner.ts  test-all-examples.ts  test-compilation.ts
(+81 files in other folders)
